# rcps_el

./: .gitignore  README.md  pyproject.toml
docs/: index.html
rcps_el/: __init__.py
rcps_el/dataset/: BCD5.py  bioIDBenchmark.py  bioRedBenchmark.py  dataset.py
rcps_el/evaluators/: __init__.py  rcpsELEvaluator.py  rcpsELSetEvaluator.py
rcps_el/losses/: binaryMisscoverageLoss.py  hitsAtK.py  lossFunction.py
rcps_el/scores/: __init__.py  gilda_scorer.py  krissbert_scorer.py  llm_scorer.py
rcps_el/utils/: constants.py  safeMatch.py
rcps_og/: __init__.py
rcps_og/aggregators/: __init__.py  aggregators.py
rcps_og/dataset/: BCD5.py  __init__.py  bioIDBenchmark.py  bioIDGilda.py  bioRedBenchmark.py  dataset.py
rcps_og/evaluators/: __init__.py  rcpsOGEvaluator.py  rcpsOGSetEvaluator.py
rcps_og/losses/: __init__.py  binaryMisscoverageLoss.py  hitsAtK.py  lossFunction.py
rcps_og/scores/: __init__.py  fuzzy_string_scorer.py  llm_scorer.py  sab_bert_scorer.py  scorer.py
rcps_og/utils/: __init__.py  benchmarkDataset.py  constants.py  listLosses.py  listScorers.py  losses.py  scores.py  utils.py
scripts/: extract_BioRed_dataset.py  extract_bcd5_dataset.py  extract_phenotype_dataset.py  plot_1_minus_hits_at_k.py  plot_binary_coverage.py  plot_hits_at_k.py  process_bioid.py  pull_BioRed.sh  run_rcps.py  run_trials.py
