[project]
name = "rcps-og"
version = "0.1.0"
description = "Adapting methods for risk controlled prediction sets for grounding free text to biomedical ontologies."
readme = "README.md"
requires-python = "==3.10"
dependencies = [
    "black>=25.11.0",
    "gilda>=1.4.1",
    "indra>=1.24.0",
    "polars>=1.35.2",
    "pyobo>=0.12.12",
    "rapidfuzz>=3.14.3",
]
