[project]
name = "rcps-el"
version = "0.1.0"
description = "Adapting methods for risk controlled prediction sets for grounding free text to biomedical ontologies."
readme = "README.md"
requires-python = "==3.10"
dependencies = [
    "black>=25.11.0",
    "gilda>=1.4.1",
    "indra>=1.24.0",
    "ipdb>=0.13.13",
    "polars>=1.35.2",
    "pyobo>=0.12.12",
    "rapidfuzz>=3.14.3",
    "torch==2.11.0",
    "ollama==0.6.2",
    "transformers==4.57.6",
    "datasets==4.8.5",
    ## Use LLMClients from DGLink ## 
    "dglink @ git+https://github.com/buzgalbraith/dglink.git@b3ee917", 
]
